--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,8 @@
                     <dependency>
                         <groupId>com.h2database</groupId>
                         <artifactId>h2</artifactId>
-                        <scope>runtime</scope>
+                        <version>2.2.224</version>
+
                     </dependency>
                 </dependencies>
             </plugin>
