--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.show-sql=true
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 server.error.whitelabel.enabled=false
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 
 
