--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ server.error.whitelabel.enabled=false
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
+logging.level.org.springframework.security=DEBUG
+
 
 
